RAVE-296 added a view of your own Widgets and added a link to the WidgetStore to see the Widgets that you created
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1208570 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -101,6 +101,8 @@ page.store.list.noresult=No widgets found
 page.store.list.result.x.to.y=Showing {0} - {1} of {2} widgets
 page.store.list.search.noresult=No widgets found for ''{0}''
 page.store.list.search.result.x.to.y=Showing {0} - {1} of {2} widgets that match ''{3}''
+page.store.list.widgets.mine=My Widgets
+page.store.list.widgets.all=All Widgets
 
 page.userprofile.title=Update user profile
 page.userprofile.button=Update profile
