--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -101,6 +101,8 @@ page.store.list.noresult=Geen widgets gevonden
 page.store.list.result.x.to.y={0} - {1} van {2} widgets getoond
 page.store.list.search.noresult=Geen widgets gevonden voor ''{0}''
 page.store.list.search.result.x.to.y={0} - {1} van {2} widgets getoond welke overeenkomen met ''{3}''
+page.store.list.widgets.mine=My Widgets
+page.store.list.widgets.all=All Widgets
 
 page.userprofile.title=Update gebruikersprofiel
 page.userprofile.button=Update profiel
