--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -127,7 +127,7 @@ admin.home.title=Rave admin interface
 admin.home.shorttitle=Home
 admin.home.subtitle=Welcome to the Rave admin interface
 admin.home.intro=<p>For help, go to the \
-  <a href="http://incubator.apache.org/rave/documentation/admin-interface.html">documentation site</a>.</p>
+  <a href="http://incubator.apache.org/rave/documentation/admin-interface.html" target="_blank">documentation site</a>.</p>
 admin.widgets.title=Rave admin interface - Widgets
 admin.widgets.shorttitle=Widgets
 admin.users.title=Rave admin interface - Users
