(Rave-210) Committing Venkat's patch for disabling widgets
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1212601 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -178,6 +178,8 @@ widget.author=Author
 widget.authorEmail=Author's email address
 widget.description=Description
 widget.description.required=Description is required
+widget.disableRendering=Disable Gadget
+widget.disableRenderingMessage=Disable Gadget Message
 widget.screenshotUrl=Screenshot
 widget.screenshotUrl.malformed=URL is malformed
 widget.thumbnailUrl=Thumbnail
