--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -178,6 +178,8 @@ widget.author=Eigenaar
 widget.authorEmail=E-mail adres eigenaar
 widget.description=Beschrijving
 widget.description.required=Beschrijving is verplicht
+widget.disableRendering=Uit te schakelen Gadget
+widget.disableRenderingMessage=Uit te schakelen Gadget Message
 widget.screenshotUrl=Screenshot
 widget.screenshotUrl.malformed=URL is niet correct
 widget.thumbnailUrl=Miniatuur
