Completing initial tiles integration -- all pages are now derived from the same base_layout.jsp template. Supports RAVE-343.
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1213701 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -57,7 +57,6 @@ page.general.movethispage.tofirst=To First Tab (Set as Default)
 page.general.password=Password:
 page.general.screenshot=screenshot
 page.general.title=Rave
-page.general.titlesuffix= - Rave
 page.general.thumbnail=thumbnail
 page.general.toadmininterface=Admin interface
 page.general.username=Username:
@@ -108,6 +107,7 @@ page.userprofile.title=Update user profile
 page.userprofile.button=Update profile
 page.userprofile.openid.url=OpenID URL:
 
+page.widget.title=Widget Detail
 page.widget.addToPage=Add to Page
 page.widget.backToStore=Back to Store
 page.widget.widgetPreview=Widget Preview
@@ -160,6 +160,7 @@ admin.widgetdetail.action.update.success=The widget has been updated
 admin.preferences.title=Rave admin interface - Preferences
 admin.preferences.shorttitle=Preferences
 admin.preferences.edit=Edit preferences
+admin.preferencedetail.title=Rave admin interface - Preferences
 admin.preferencedetail.titleSuffix=Page title suffix
 admin.preferencedetail.pageSize=Number of items per page (list)
 admin.preferencedetail.pageSize.malformed=Enter a whole number greater than 0
