--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -57,7 +57,6 @@ page.general.movethispage.tofirst=Naar eerste tab
 page.general.password=Wachtwoord:
 page.general.screenshot=screenshot
 page.general.title=Rave
-page.general.titlesuffix= - Rave
 page.general.thumbnail=miniatuur
 page.general.toadmininterface=Beheeromgeving
 page.general.username=Gebruikersnaam:
@@ -108,6 +107,7 @@ page.userprofile.title=Update gebruikersprofiel
 page.userprofile.button=Update profiel
 page.userprofile.openid.url=OpenID URL:
 
+page.widget.title=Widget Detail
 page.widget.addToPage=Voeg toe aan pagina
 page.widget.backToStore=Terug naar de winkel
 page.widget.widgetPreview=Widget preview
@@ -160,6 +160,7 @@ admin.widgetdetail.action.update.success=De widget is bijgewerkt
 admin.preferences.title=Rave admin interface - Voorkeuren
 admin.preferences.shorttitle=Voorkeuren
 admin.preferences.edit=Pas voorkeuren aan
+admin.preferencedetail.title=Rave admin interface - Voorkeuren
 admin.preferencedetail.titleSuffix=Toevoeging pagina titel
 admin.preferencedetail.pageSize=Aantal items per pagina (lijst)
 admin.preferencedetail.pageSize.malformed=Voer een geheel getal in groter dan 0
