RAVE-97: Code in support of dynamic page layout templates. Still TODO: un-hardcode the layout picklist items from the dialog box
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1215234 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -67,6 +67,7 @@ page.general.addpage.layout.columns_2=Two Columns
 page.general.addpage.layout.columns_2wn=Two Columns (wide/narrow)
 page.general.addpage.layout.columns_3=Three Columns
 page.general.addpage.layout.columns_3nwn=Three Columns (narrow/wide/narrow)
+page.general.addpage.layout.columns_3_newuser=Three Columns (new user)
 page.general.addpage.layout.columns_4=Four Columns
 page.general.addpage.layout.columns_3nwn_1_bottom=Four Columns (narrow/wide/narrow/bottom)
 page.general.addpage.selectlayout=Select Page Layout:
@@ -76,6 +77,9 @@ page.mobile_home.title=Home
 page.home.welcome=Hello {0}, welcome to Rave!
 
 page.menu.title=Page Actions Menu
+
+page.layout.newuser.introtext=This is the default page layout for new users.  We suggest you play with some of the Rave features:<ul><li>Rename this page and change the widget layout</li><li>Add a new page</li><li>Add widgets from the Widget Store</li><li>Edit the preferences for a widget</li><li>Move widgets around on a page</li><li>Collapse and restore a widget</li><li>much more...</li></ul>
+page.layout.newuser.subtitle=We have provided a few sample widgets for you to try out.  Click on the Widget Store link above to add more widgets!
 
 page.login.title=Login
 page.login.createaccount=New User
