--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -67,6 +67,7 @@ page.general.addpage.layout.columns_2=Twee kolommen
 page.general.addpage.layout.columns_2wn=Twee kolommen (breed/smal)
 page.general.addpage.layout.columns_3=Drie kolommen
 page.general.addpage.layout.columns_3nwn=Drie kolommen (smal/breed/smal)
+page.general.addpage.layout.columns_3_newuser=Drie kolommen (nieuwe gebruiker)
 page.general.addpage.layout.columns_4=Vier kolommen
 page.general.addpage.layout.columns_3nwn_1_bottom=Vier kolommen (smal/breed/smal/beneden)
 page.general.addpage.selectlayout=Selecteer de Pagina indeling:
@@ -76,6 +77,9 @@ page.mobile_home.title=Home
 page.home.welcome=Hallo {0}, welkom bij Rave!
 
 page.menu.title=Pagina Acties Menu
+
+page.layout.newuser.introtext=Dit is de standaard pagina-indeling voor nieuwe gebruikers. Wij raden u aan spelen met een aantal van de Rave kenmerken:<ul><li>Hernoem deze pagina en wijzig de widget layout</li><li>Voeg een nieuwe pagina</li><li>Voeg widgets van de Widget Store</li><li>de voorkeuren bewerken voor een widget</li><li>Ga widgets rond op een pagina</li><li>samenvouwen en herstellen van een widget</li><li>nog veel meer ...</li></ul>
+page.layout.newuser.subtitle=We hebben een paar voorbeeld widgets voor je uit te proberen. Klik op de Widget Store link hierboven om meer widgets toe te voegen!
 
 page.login.title=Inloggen
 page.login.createaccount=Nieuwe gebruiker
