RAVE-73: Users can see the most popular widgets in the widget repository
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1221873 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -120,6 +120,7 @@ page.widget.rate.like=Like
 page.widget.rate.dislike=Dislike
 page.widget.comments=Comments
 page.widget.comment.edit=Edit Comment
+page.widget.usercount=users
 
 page.addwidget.title=Add new widget
 page.addwidget.form.header=Widget
