--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -120,6 +120,7 @@ page.widget.rate.like=Leuk
 page.widget.rate.dislike=Niet leuk
 page.widget.comments=Commentaren
 page.widget.comment.edit=Bewerk commentaar
+page.widget.usercount=gebruikers
 
 page.addwidget.title=Voeg nieuwe widget toe
 page.addwidget.form.header=Widget
