RAVE-394: Create an item in the Widget menu to go directly to its Widget Detail page
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1222358 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -208,6 +208,7 @@ widget.widgetStatus.PUBLISHED=
 
 widget.chrome.toggle=In-/uitklappen widget
 
+widget.menu.about=Over deze Widget
 widget.menu.delete=Verwijder widget
 widget.menu.editprefs=Pas voorkeursinstellingen aan
 widget.menu.maximize=Maximaliseer
