--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -208,6 +208,7 @@ widget.widgetStatus.PUBLISHED=
 
 widget.chrome.toggle=Collapse/Restore Widget
 
+widget.menu.about=About this Widget
 widget.menu.delete=Delete Widget
 widget.menu.editprefs=Edit Preferences
 widget.menu.maximize=Maximize
