RAVE-69: Widget metadata can be imported into the Widget Repository from Shindig
Applying patch submitted by Venkat Mahadevan

git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1222389 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -72,6 +72,8 @@ page.general.addpage.layout.columns_4=Vier kolommen
 page.general.addpage.layout.columns_3nwn_1_bottom=Vier kolommen (smal/breed/smal/beneden)
 page.general.addpage.selectlayout=Selecteer de Pagina indeling:
 
+page.getWidgetMetadata.button=Get widget metadata
+
 page.home.title=Home
 page.mobile_home.title=Home
 page.home.welcome=Hallo {0}, welkom bij Rave!
