--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -72,6 +72,8 @@ page.general.addpage.layout.columns_4=Four Columns
 page.general.addpage.layout.columns_3nwn_1_bottom=Four Columns (narrow/wide/narrow/bottom)
 page.general.addpage.selectlayout=Select Page Layout:
 
+page.getWidgetMetadata.button=Get widget metadata
+
 page.home.title=Home
 page.mobile_home.title=Home
 page.home.welcome=Hello {0}, welcome to Rave!
