Modify (machine) translated messages
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1227266 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -70,9 +70,9 @@ page.general.addpage.layout.columns_3nwn=Drie kolommen (smal/breed/smal)
 page.general.addpage.layout.columns_3_newuser=Drie kolommen (nieuwe gebruiker)
 page.general.addpage.layout.columns_4=Vier kolommen
 page.general.addpage.layout.columns_3nwn_1_bottom=Vier kolommen (smal/breed/smal/beneden)
-page.general.addpage.selectlayout=Selecteer de Pagina indeling:
+page.general.addpage.selectlayout=Selecteer paginaindeling:
 
-page.getWidgetMetadata.button=Get widget metadata
+page.getWidgetMetadata.button=Haal widget metadata op
 
 page.home.title=Home
 page.mobile_home.title=Home
@@ -80,8 +80,17 @@ page.home.welcome=Hallo {0}, welkom bij Rave!
 
 page.menu.title=Pagina Acties Menu
 
-page.layout.newuser.introtext=Dit is de standaard pagina-indeling voor nieuwe gebruikers. Wij raden u aan spelen met een aantal van de Rave kenmerken:<ul><li>Hernoem deze pagina en wijzig de widget layout</li><li>Voeg een nieuwe pagina</li><li>Voeg widgets van de Widget Store</li><li>de voorkeuren bewerken voor een widget</li><li>Ga widgets rond op een pagina</li><li>samenvouwen en herstellen van een widget</li><li>nog veel meer ...</li></ul>
-page.layout.newuser.subtitle=We hebben een paar voorbeeld widgets voor je uit te proberen. Klik op de Widget Store link hierboven om meer widgets toe te voegen!
+page.layout.newuser.introtext=Dit is de standaard pagina-indeling voor nieuwe gebruikers. \
+  Wij raden je aan een aantal van de Rave kenmerken uit te proberen:\
+  <ul><li>Hernoem deze pagina en wijzig de widget layout</li>\
+  <li>Voeg een nieuwe pagina toe</li>\
+  <li>Voeg widgets toe van de Widgetwinkel</li>\
+  <li>Bewerk de voorkeuren voor een widget</li>\
+  <li>Verplaats widgets op een pagina</li>\
+  <li>Klap een widget in en uit</li>\
+  <li>nog veel meer ...</li></ul>
+page.layout.newuser.subtitle=We hebben een paar voorbeeldwidgets voor je toegevoegd om uit te proberen. \
+  Klik op de Widgetwinkel link hierboven om meer widgets toe te voegen!
 
 page.login.title=Inloggen
 page.login.createaccount=Nieuwe gebruiker
@@ -106,22 +115,22 @@ page.store.list.noresult=Geen widgets gevonden
 page.store.list.result.x.to.y={0} - {1} van {2} widgets getoond
 page.store.list.search.noresult=Geen widgets gevonden voor ''{0}''
 page.store.list.search.result.x.to.y={0} - {1} van {2} widgets getoond welke overeenkomen met ''{3}''
-page.store.list.widgets.mine=My Widgets
-page.store.list.widgets.all=All Widgets
+page.store.list.widgets.mine=Mijn widgets
+page.store.list.widgets.all=Alle widgets
 
 page.userprofile.title=Update gebruikersprofiel
 page.userprofile.button=Update profiel
 page.userprofile.openid.url=OpenID URL:
 
-page.widget.title=Widget Detail
+page.widget.title=Widgetdetail
 page.widget.addToPage=Voeg toe aan pagina
 page.widget.backToStore=Terug naar de winkel
 page.widget.widgetPreview=Widget preview
 page.widget.rate=Waardering:
 page.widget.rate.like=Leuk
 page.widget.rate.dislike=Niet leuk
-page.widget.comments=Commentaren
-page.widget.comment.edit=Bewerk commentaar
+page.widget.comments=Opmerkingen
+page.widget.comment.edit=Bewerk opmerking
 page.widget.usercount=gebruikers
 
 page.addwidget.title=Voeg nieuwe widget toe
@@ -186,8 +195,8 @@ widget.author=Eigenaar
 widget.authorEmail=E-mail adres eigenaar
 widget.description=Beschrijving
 widget.description.required=Beschrijving is verplicht
-widget.disableRendering=Uit te schakelen Gadget
-widget.disableRenderingMessage=Uit te schakelen Gadget Message
+widget.disableRendering=Schakel widget uit
+widget.disableRenderingMessage=Tekst uitgeschakelde widget
 widget.screenshotUrl=Screenshot
 widget.screenshotUrl.malformed=URL is niet correct
 widget.thumbnailUrl=Miniatuur
@@ -210,7 +219,7 @@ widget.widgetStatus.PUBLISHED=
 
 widget.chrome.toggle=In-/uitklappen widget
 
-widget.menu.about=Over deze Widget
+widget.menu.about=Over deze widget
 widget.menu.delete=Verwijder widget
 widget.menu.editprefs=Pas voorkeursinstellingen aan
 widget.menu.maximize=Maximaliseer
