RAVE-407: Improve visibility of disabled Widget state
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1227898 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -186,15 +186,15 @@ widget.author=Author
 widget.authorEmail=Author's email address
 widget.description=Description
 widget.description.required=Description is required
-widget.disableRendering=Disable Gadget
-widget.disableRenderingMessage=Disable Gadget Message
+widget.disableRendering=Disable Widget
+widget.disableRenderingMessage=Disable Widget Message
 widget.screenshotUrl=Screenshot
 widget.screenshotUrl.malformed=URL is malformed
 widget.thumbnailUrl=Thumbnail
 widget.thumbnailUrl.malformed=URL is malformed
 widget.title=Title
 widget.title.required=Title is required
-widget.titleUrl=URL the gadget title links to
+widget.titleUrl=URL the widget title links to
 widget.titleUrl.malformed=URL is malformed
 widget.type=Type
 widget.type.OpenSocial=OpenSocial
@@ -209,6 +209,7 @@ widget.widgetStatus.PREVIEW=This widget is waiting for approval by the site admi
 widget.widgetStatus.PUBLISHED=
 
 widget.chrome.toggle=Collapse/Restore Widget
+widget.chrome.disabled=This widget is currently disabled
 
 widget.menu.about=About this Widget
 widget.menu.delete=Delete Widget
