--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -218,6 +218,7 @@ widget.widgetStatus.PREVIEW=Deze widget wacht op goedkeuring door de sitebeheerd
 widget.widgetStatus.PUBLISHED=
 
 widget.chrome.toggle=In-/uitklappen widget
+widget.chrome.disabled=Deze widget is momenteel uitgeschakeld
 
 widget.menu.about=Over deze widget
 widget.menu.delete=Verwijder widget
