(RAVE-393) Committing patch contributed by Ankur Goyal to fix +1/-1 bug.
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1229611 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -123,6 +123,8 @@ page.widget.rate.dislike=Dislike
 page.widget.comments=Comments
 page.widget.comment.edit=Edit Comment
 page.widget.usercount=users
+page.widget.rate.likes=Likes: 
+page.widget.rate.dislikes=Dislikes: 
 
 page.addwidget.title=Add new widget
 page.addwidget.form.header=Widget
