--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -132,6 +132,8 @@ page.widget.rate.dislike=Niet leuk
 page.widget.comments=Opmerkingen
 page.widget.comment.edit=Bewerk opmerking
 page.widget.usercount=gebruikers
+page.widget.rate.likes=Leuk: 
+page.widget.rate.dislikes=Niet leuk: 
 
 page.addwidget.title=Voeg nieuwe widget toe
 page.addwidget.form.header=Widget
