RAVE-70: Users can tag Widgets in the Widget Repository
Committing patch supplied by Jennifer Lin

git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1230175 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -124,7 +124,9 @@ page.widget.comments=Comments
 page.widget.comment.edit=Edit Comment
 page.widget.usercount=users
 page.widget.rate.likes=Likes: 
-page.widget.rate.dislikes=Dislikes: 
+page.widget.rate.dislikes=Dislikes:
+page.widget.tags.title=Tags:
+page.widget.tags.add=Add New Tag:
 
 page.addwidget.title=Add new widget
 page.addwidget.form.header=Widget
