--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -134,6 +134,10 @@ page.widget.comment.edit=Bewerk opmerking
 page.widget.usercount=gebruikers
 page.widget.rate.likes=Leuk: 
 page.widget.rate.dislikes=Niet leuk: 
+page.widget.tags.title=Labels:
+page.widget.tags.add=Nieuwe tag toevoegen:
+page.widget.tags.or=--of--
+page.widget.tags.select=Selecteer uit lijst:
 
 page.addwidget.title=Voeg nieuwe widget toe
 page.addwidget.form.header=Widget
