Adding update widget metadata similar to addwidget page. RAVE-422
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1230863 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -73,6 +73,7 @@ page.general.addpage.layout.columns_3nwn_1_bottom=Four Columns (narrow/wide/narr
 page.general.addpage.selectlayout=Select Page Layout:
 
 page.getWidgetMetadata.button=Get widget metadata
+page.updateWidgetMetadata.button=Update widget metadata
 
 page.home.title=Home
 page.mobile_home.title=Home
