--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -73,6 +73,7 @@ page.general.addpage.layout.columns_3nwn_1_bottom=Vier kolommen (smal/breed/smal
 page.general.addpage.selectlayout=Selecteer paginaindeling:
 
 page.getWidgetMetadata.button=Haal widget metadata op
+page.updateWidgetMetadata.button=Update widget metadata op
 
 page.home.title=Home
 page.mobile_home.title=Home
