Code in support of RAVE-299: Create mechanism for using message bundle text inside javascript code
TODO: improve performance by caching the javascript response content per locale in the controller rather than generating it with every request

git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1231324 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -223,3 +223,28 @@ widget.menu.maximize=Maximize
 widget.menu.movethiswidget=Move this widget to page:
 widget.menu.movetopage=Move to Page
 widget.menu.title=Widget Actions
+
+#######################################################################################################################
+# messages available to the client javascript via the MessageBundleController must start with "_rave_client."
+#######################################################################################################################
+_rave_client.api.error=Rave encountered an error while trying to contact the server.  Please reload the page and try again. Error:
+_rave_client.api.rpc.error.invalid_params=Rave attempted to update the server with your recent changes, but the changes were rejected by the server as invalid.
+_rave_client.api.rpc.error.internal=Rave attempted to update the server with your recent changes, but the server encountered an internal error.
+_rave_client.api.widget_metadata.invalid_params=Both url and type are needed to get the metadata
+_rave_client.api.widget_metadata.parse_error=Unable to parse Widget for its metadata.\n\nPlease verify that the url is pointing to a valid Widget of the type specified.
+_rave_client.common.add=Add
+_rave_client.common.cancel=Cancel
+_rave_client.common.move=Move
+_rave_client.common.save=Save
+_rave_client.common.update=Update
+_rave_client.form.password.invalid_match=The password does not match
+_rave_client.opensocial.render_error=Unable to render OpenSocial Gadget:
+_rave_client.page.add=Add a New Page
+_rave_client.page.duplicate_name=A page with that name already exists
+_rave_client.page.update=Update Page
+_rave_client.widget.add_prefix=The widget
+_rave_client.widget.add_suffix= has been added to your page
+_rave_client.widget.prefs.required.title=* indicates a required input
+_rave_client.widget.provider.error=This widget type is currently unsupported.  Check with your administrator and be sure the correct provider is registered.
+_rave_client.widget.remove_confirm=Are you sure you want to remove this widget from your page?
+_rave_client.widget.users.added_by=has been added by...
