--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -234,3 +234,28 @@ widget.menu.maximize=Maximaliseer
 widget.menu.movethiswidget=Verplaats deze widget naar pagina:
 widget.menu.movetopage=Verplaats naar Pagina
 widget.menu.title=Widget acties
+
+#######################################################################################################################
+# boodschappen ter beschikking van de opdrachtgever javascript via de MessageBundleController moet beginnen met "_rave_client."
+#######################################################################################################################
+_rave_client.api.error=Rave is een fout opgetreden tijdens een poging om de server contact. Laad de pagina opnieuw en probeer het opnieuw. fout:
+_rave_client.api.rpc.error.invalid_params=Rave geprobeerd de server met uw recente wijzigingen bij te werken, maar de veranderingen waren geweigerd door de server als ongeldig.
+_rave_client.api.rpc.error.internal=Rave geprobeerd de server met uw recente wijzigingen bij te werken, maar de server heeft een interne fout.
+_rave_client.api.widget_metadata.invalid_params=Zowel de url en het type zijn nodig om de metadata te krijgen
+_rave_client.api.widget_metadata.parse_error=Kan Widget parsen voor haar metadata.\n\nControleer te controleren of de url verwijst naar een geldige Widget van de opgegeven type.
+_rave_client.common.add=Toevoegen
+_rave_client.common.cancel=Annuleren
+_rave_client.common.move=Bewegen
+_rave_client.common.save=Besparen
+_rave_client.common.update=Updaten
+_rave_client.form.password.invalid_match=Het wachtwoord komt niet overeen
+_rave_client.opensocial.render_error=Kan OpenSocial Gadget maken:
+_rave_client.page.add=Voeg een nieuwe pagina
+_rave_client.page.duplicate_name=Een pagina met die naam bestaat al
+_rave_client.page.update=Update-pagina
+_rave_client.widget.add_prefix=De widget
+_rave_client.widget.add_suffix= is toegevoegd aan uw pagina
+_rave_client.widget.prefs.required.title=* geeft een vereist ingang
+_rave_client.widget.provider.error=Deze widget type is momenteel niet ondersteund. Neem contact op met uw beheerder en zorg ervoor dat de juiste provider is geregistreerd.
+_rave_client.widget.remove_confirm=Weet je zeker dat je deze widget te verwijderen van uw pagina?
+_rave_client.widget.users.added_by=is toegevoegd door...
