(Rave-421)(Rave-360) Committing patch submitted by Ankur Goyal for Rave-421. Jessica Abraham submitted a similar patch for Rave-360 that I was unable to get working but included some additional useful features (like displaying new params in the admin's user interface.  I recommend these be submitted as a follow up patch.
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1233570 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -60,6 +60,13 @@ page.general.title=Rave
 page.general.thumbnail=thumbnail
 page.general.toadmininterface=Admin interface
 page.general.username=Username:
+page.general.login.information=Enter Login Information
+page.general.personal.information=Enter Personal Information (optional)
+page.general.first.name=First Name: 
+page.general.last.name=Last Name: 
+page.general.display.name=Name seen by other users: 
+page.general.status=Status: 
+page.general.about.me=Describe Yourself: 
 
 page.general.addpage.title=Title
 page.general.addpage.layout.columns_1=One Column
