--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -60,6 +60,13 @@ page.general.title=Rave
 page.general.thumbnail=miniatuur
 page.general.toadmininterface=Beheeromgeving
 page.general.username=Gebruikersnaam:
+page.general.login.information=Treden Login Informatie
+page.general.personal.information=Treden persoonlijke informatie (optioneel)
+page.general.first.name=Voornaam: 
+page.general.last.name=Achternaam: 
+page.general.display.name=Naam gezien door andere gebruikers: 
+page.general.status=Burgerlijke staat: 
+page.general.about.me=Beschrijf Uzelf: 
 
 page.general.addpage.title=Titel
 page.general.addpage.layout.columns_1=Een kolom
