(RAVE-72) Committing patch contributed by Jennifer Lin
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1234001 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -125,6 +125,7 @@ page.store.list.search.noresult=Geen widgets gevonden voor ''{0}''
 page.store.list.search.result.x.to.y={0} - {1} van {2} widgets getoond welke overeenkomen met ''{3}''
 page.store.list.widgets.mine=Mijn widgets
 page.store.list.widgets.all=Alle widgets
+page.store.list.widgets.tag= Door  Tag:
 
 page.userprofile.title=Update gebruikersprofiel
 page.userprofile.button=Update profiel
