RAVE-434: Widget Category Assignment
Zero or more categories can now be assigned to a Widget.  The categories display on the Widget Detail page as well as the Widget Store listing for the widget.

git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1236296 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -197,6 +197,7 @@ admin.list.search.result.x.to.y=Showing {0} - {1} of {2} results that match ''{3
 
 widget.author=Author
 widget.authorEmail=Author's email address
+widget.categories=Categories:
 widget.description=Description
 widget.description.required=Description is required
 widget.disableRendering=Disable Widget
