--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -208,6 +208,7 @@ admin.list.search.result.x.to.y={0} - {1} van {2} resultaten getoond welke overe
 
 widget.author=Eigenaar
 widget.authorEmail=E-mail adres eigenaar
+widget.categories=Categorieen:
 widget.description=Beschrijving
 widget.description.required=Beschrijving is verplicht
 widget.disableRendering=Schakel widget uit
