RAVE-433: Widget Category Admin Interface - applying patch submitted by Aaron Gooch to finish this story
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1236808 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -187,6 +187,24 @@ admin.preferencedetail.pageSize.malformed=Enter a whole number greater than 0
 admin.preferencedetail.updateButton=Update preferences
 admin.preferencedetail.action.update.success=Preferences have been updated
 admin.preferencedetail.goback=\u00ab Back to overview
+admin.categories.title=Rave admin interface - Categories
+admin.category.shortTitle=Categories
+admin.category.create=Create Category
+admin.category.delete=Delete Category
+admin.category.update=Update Category
+admin.categoryData.text=Text
+admin.categoryData.createdDate=Date Created
+admin.categoryData.createdBy=Created By
+admin.categoryData.modifiedDate=Date Modified
+admin.categoryData.modifiedBy=Modified By
+admin.categoryDetail.action.update.success=Category has been updated
+admin.categoryDetail.action.delete.success=Category has been removed
+admin.categoryDetail.action.create.success=Category has been created
+admin.categoryDetail.goback=\u00ab Back to Categories
+admin.categoryDetail.action.delete.confirm=Yes I want to delete this category
+admin.categoryDetail.editData=Edit category data
+admin.categoryDetail.label.text=Text:
+admin.categoryDetail.title=Rave admin interface - Category
 admin.clearsearch=Clear search
 admin.delete=Delete
 
