--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -198,6 +198,24 @@ admin.preferencedetail.pageSize.malformed=Voer een geheel getal in groter dan 0
 admin.preferencedetail.updateButton=Wijzig voorkeuren
 admin.preferencedetail.action.update.success=De voorkeuren zijn bijgewerkt
 admin.preferencedetail.goback=\u00AB Terug naar overzicht
+admin.categories.title=Rave admin interface - Categorieen
+admin.category.shortTitle=Categorieen
+admin.category.create=Categorie aanmaken
+admin.category.delete=Verwijder categorie
+admin.category.update=Updaten categorie
+admin.categoryData.text=Tekst
+admin.categoryData.createdDate=Aanmaakdatum
+admin.categoryData.createdBy=gemaakt door
+admin.categoryData.modifiedDate=datum Gewijzigd
+admin.categoryData.modifiedBy=aangepast door
+admin.categoryDetail.action.update.success=Categorie bijgewerkt
+admin.categoryDetail.action.delete.success=Categorie verwijderd
+admin.categoryDetail.action.create.success=Categorie aangemaakt
+admin.categoryDetail.goback=\u00ab Terug naar categorieen
+admin.categoryDetail.action.delete.confirm=Ja, ik wil deze categorie wilt verwijderen
+admin.categoryDetail.editData=Wijzig de categorie van gegevens
+admin.categoryDetail.label.text=Tekst:
+admin.categoryDetail.title=Rave admin interface - Categorie
 admin.clearsearch=Maak zoekveld leeg
 admin.delete=Verwijder
 
