RAVE-435: Navigate Widget Repository via Category.  Applying patch supplied by Jacob Hilker
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1237759 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -126,6 +126,7 @@ page.store.list.search.result.x.to.y={0} - {1} van {2} widgets getoond welke ove
 page.store.list.widgets.mine=Mijn widgets
 page.store.list.widgets.all=Alle widgets
 page.store.list.widgets.tag= Door  Tag:
+page.store.list.widgets.category= Op categorie:
 
 page.userprofile.title=Update gebruikersprofiel
 page.userprofile.button=Update profiel
