--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -117,6 +117,7 @@ page.store.list.search.result.x.to.y=Showing {0} - {1} of {2} widgets that match
 page.store.list.widgets.mine=My Widgets
 page.store.list.widgets.all=All Widgets
 page.store.list.widgets.tag=By Tag:
+page.store.list.widgets.category=By Category:
 
 page.userprofile.title=Update user profile
 page.userprofile.button=Update profile
