Applied patch from Ankur Goyal. RAVE-415
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1238083 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/messages.properties
+++ b/rave-portal-resources/src/main/resources/messages.properties
@@ -144,6 +144,29 @@ page.addwidget.form.submit=Add widget
 page.addwidget.result.exists=The widget you submitted already exists.
 page.addwidget.result.success=The widget was successfully added.
 
+page.profile.title={0}''s Profile
+page.profile.personal.info=Personal Information
+page.profile.first.name=First Name: 
+page.profile.last.name=Last Name: 
+page.profile.display.name=Display Name: 
+page.profile.basic.info=Basic Information
+page.profile.about.me=About Me: 
+page.profile.status=Status: 
+page.profile.contact.info=Contact Information
+page.profile.email=Email ID: 
+page.profile.posts=Posts
+page.profile.posts.page=/WEB-INF/jsp/views/profile_posts.jsp
+page.profile.about=About
+page.profile.about.page=/WEB-INF/jsp/views/profile_about.jsp
+page.profile.widgets=Widgets
+page.profile.widgets.page=/WEB-INF/jsp/views/profile_widgets.jsp
+page.profile.find.friends=Find Friends
+page.profile.friends.page=/WEB-INF/jsp/views/profile_friend_finder.jsp
+page.profile.edit=Edit
+page.profile.edit.option=Edit Your Profile Here
+page.profile.save=Save
+page.profile.cancel=Cancel
+
 admin.home.title=Rave admin interface
 admin.home.shorttitle=Home
 admin.home.subtitle=Welcome to the Rave admin interface
