--- a/rave-portal-resources/src/main/resources/messages_nl.properties
+++ b/rave-portal-resources/src/main/resources/messages_nl.properties
@@ -155,6 +155,29 @@ page.addwidget.form.submit=Voeg widget toe
 page.addwidget.result.exists=Deze widget bestaat al
 page.addwidget.result.success=De widget is succesvol toegevoegd.
 
+page.profile.title=Profiel van {0}
+page.profile.personal.info=Persoonsgegevens
+page.profile.first.name=Voornaam: 
+page.profile.last.name=Achternaam: 
+page.profile.display.name=Naam te bezien: 
+page.profile.basic.info=Algemene informatie
+page.profile.about.me=Over mij: 
+page.profile.status=Burgerlijke staat: 
+page.profile.contact.info=Contact informatie
+page.profile.email=E-mail: 
+page.profile.posts=Posten
+page.profile.posts.page=/WEB-INF/jsp/views/profile_posts.jsp
+page.profile.about=Over mij
+page.profile.about.page=/WEB-INF/jsp/views/profile_about.jsp
+page.profile.widgets=Widgets
+page.profile.widgets.page=/WEB-INF/jsp/views/profile_widgets.jsp
+page.profile.find.friends=Vinden vrienden
+page.profile.friends.page=/WEB-INF/jsp/views/profile_friend_finder.jsp
+page.profile.edit=Hun
+page.profile.edit.option=Hun uw profiel hier
+page.profile.save=Behalve
+page.profile.cancel=annuleren
+
 admin.home.title=Rave admin interface
 admin.home.shorttitle=Home
 admin.home.subtitle=Welkom in de Rave admin interface
